--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-transformers
-torch
 streamlit
+torch
+transformers
 reportlab
 wordcloud
 matplotlib
 python-docx
+gtts
+keybert
+beautifulsoup4
+requests
