--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-torch
-transformers
-reportlab
-wordcloud
-matplotlib
-python-docx
-gtts
-keybert
+streamlit==1.25.0
+transformers==4.33.0
+torch==2.0.1
+reportlab==3.6.14
+wordcloud==1.9.2
+matplotlib==3.8.0
+python-docx==0.8.11
+gtts==2.3.2
+keybert==0.7.0
+pandas==2.0.3
