--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-streamlit==1.25.0
-transformers==4.33.0
-torch==2.0.1
-reportlab==3.6.14
-wordcloud==1.9.2
-matplotlib==3.8.0
-python-docx==0.8.11
-gtts==2.3.2
-keybert==0.7.0
-pandas==2.0.3
+transformers
+torch
+streamlit
+reportlab
+wordcloud
+matplotlib
+python-docx
