--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-transformers
-torch
-streamlit
-reportlab
-wordcloud
-matplotlib
-python-docx
+streamlit==1.24.0
+transformers==4.33.2
+torch==2.0.1
+reportlab==3.6.14
+python-docx==0.8.11
+pandas==2.1.1
+googletrans==4.0.0-rc1
