--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.24.0
 transformers==4.33.2
-torch==2.0.1
+torch==2.0.1+cpu
 reportlab==3.6.14
 python-docx==0.8.11
-pandas==2.1.1
-googletrans==4.0.0rc1
