--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-streamlit==1.26.0
-torch==2.0.1
-transformers==4.34.0
-reportlab==3.6.14
-python-docx==0.8.11
+streamlit
+torch
+transformers
+reportlab
+wordcloud
+matplotlib
+python-docx
+gtts
+keybert
+beautifulsoup4
+requests
