--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ streamlit
 torch
 transformers
 reportlab
+wordcloud
 matplotlib
-docx
+python-docx
 gtts
 keybert
 beautifulsoup4
 requests
-spacy
-textstat
-python-docx
