--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-torch
 transformers
+torch
 reportlab
 wordcloud
 matplotlib
@@ -9,3 +9,5 @@ gtts
 keybert
 beautifulsoup4
 requests
+zipfile36  # For handling ZIP files
+sqlite3  # Included in Python by default, but listed for clarity
