--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit==1.29.0
-transformers==4.36.2
-torch==2.1.1
+streamlit==1.32.0
+transformers==4.36.0
+torch==2.1.0
 reportlab==4.0.4
 wordcloud==1.9.2
-matplotlib==3.7.4
+matplotlib==3.7.0
 python-docx==0.8.11
 gtts==2.4.0
 keybert==0.7.0
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.0
 requests==2.31.0
+PyPDF2==3.0.1
