--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit==1.42.2
-transformers==4.49.0
-torch==2.6.0+cpu
-reportlab==4.0.4
-wordcloud==1.9.2
-matplotlib==3.7.0
-python-docx==0.8.11
-gtts==2.4.0
-keybert==0.7.0
-beautifulsoup4==4.12.0
-requests==2.31.0
-PyPDF2==3.0.1
+streamlit
+torch
+transformers
+reportlab
+wordcloud
+matplotlib
+python-docx
+gtts
+keybert
+beautifulsoup4
+requests
