--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
 streamlit
-torch
-transformers
-reportlab
-wordcloud
-matplotlib
+PyPDF2
 python-docx
 gtts
-keybert
-beautifulsoup4
-requests
-pandas
-numpy
-PyPDF2
-
+speechrecognition
+pydub
