--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 streamlit
-PyPDF2
-SpeechRecognition
-python-docx
-pydub
-transformers
 torch
-sumy
-gensim
-
+transformers
+reportlab
+wordcloud
+matplotlib
+python-docx
+gtts
+keybert
+beautifulsoup4
+requests
+scikit-learn  # Required for KeyBERT
+numpy  # Improves performance for word clouds
+pillow  # Required by wordcloud and reportlab
