--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ sentence-transformers  # Enhances KeyBERT performance
 bertopic  # Enables topic modeling
 pandas  # Useful for data processing
 scipy  # Enhances similarity calculations
+langdetect
+
