--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,4 @@ requests
 scikit-learn  # Required for KeyBERT
 numpy  # Improves performance for word clouds
 pillow  # Required by wordcloud and reportlab
-sentence-transformers  # Enhances KeyBERT performance
-bertopic  # Enables topic modeling
-pandas  # Useful for data processing
-scipy  # Enhances similarity calculations
-langdetect
-
+langdetect  # Required if language detection is used
