--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 streamlit
-transformers
 torch
-reportlab
-wordcloud
-matplotlib
-python-docx
-gtts
-keybert
-beautifulsoup4
+transformers
+firebase-admin
+streamlit-authenticator
 requests
-zipfile36
+beautifulsoup4
+gtts
+matplotlib
+wordcloud
+python-docx
+reportlab
+keybert
