--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
 streamlit
-torch
 transformers
-firebase-admin
-streamlit-authenticator
-requests
-beautifulsoup4
-gtts
-matplotlib
-wordcloud
-python-docx
+torch
 reportlab
+wordcloud
+matplotlib
+python-docx
+gtts
 keybert
-firebase-admin
-
+beautifulsoup4
+requests
+zipfile36
